--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,29 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Layout from "../layouts/Layout.astro";
+import NormalPage from "../components/NormalPage.astro";
+import ShadeBob from "../components/ShadeBob.astro";
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="Martin's Stuff">
+  <NormalPage date="2025-08-09">
+    <Fragment slot="side">
+      <hr />
+      <p
+        style="font-size: 15px; line-height: 22px; text-align: justify; hyphens: auto;"
+      >
+        <b>Techie Note:</b> This site is an <a href="https://astro.build/"
+          >Astro</a
+        >
+        app written in <a href="https://www.typescriptlang.org/"
+          >Type&shy;Script</a
+        > and hosted by <a href="https://vercel.com/">Vercel</a> with data stored
+        at <a href="https://turso.tech/">Turso</a>.&nbsp; If you are curious you
+        can browse the source code on <a
+          href="https://github.com/martinkeefe/astro-me">GitHub</a
+        >.
+      </p>
+    </Fragment>
+
+    <ShadeBob />
+  </NormalPage>
 </Layout>
