--- a/src/components/NormalPage.astro
+++ b/src/components/NormalPage.astro
@@ -1,18 +1,20 @@
 ---
-import SideNav from "./SideNav.astro";
-import martian from "../assets/img/martian.png";
+import Layout from "@layouts/Layout.astro";
+import SideNav from "@components/SideNav.astro";
+import martian from "@assets/img/martian.png";
+import { app } from "@app";
 
-const { ident, date } = Astro.props;
-
-const app_menu: [] = [];
+const { title, ident, date } = Astro.props;
 ---
 
-<nav id="sidebar" class="side">
-  <a href="/"><span>Home</span><img src={martian.src} /></a>
-  <SideNav items={app_menu} ident={ident} />
-  <slot name="side" />
-</nav>
-<div class="body">
-  <slot />
-  <div class="update">Last update: {date}</div>
-</div>
+<Layout title={title}>
+  <nav id="sidebar" class="side">
+    <a href="/"><span>Home</span><img src={martian.src} /></a>
+    <SideNav items={app.menu} ident={ident} />
+    <slot name="side" />
+  </nav>
+  <div class="body">
+    <slot />
+    <div class="update">Last update: {date}</div>
+  </div>
+</Layout>
